log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 01:53:53 AM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ca72aeb
Thu 30 Mar 2023 02:04:01 AM UTC: 
 arraylist.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
f28f73b
Thu 30 Mar 2023 02:07:30 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
39e8f4a
Thu 30 Mar 2023 02:09:06 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
41e76b7
Thu 30 Mar 2023 02:09:54 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
03c9eb4
Thu 30 Mar 2023 02:31:11 AM UTC: 
 arraylist.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
f8d27a0
Thu 30 Mar 2023 02:32:39 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
33fe3f1
Thu 30 Mar 2023 02:33:24 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1efa72a
Thu 30 Mar 2023 02:34:24 AM UTC: 
 arraylist.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
2d04bc7
Thu 30 Mar 2023 02:34:35 AM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
96641ed
Thu 30 Mar 2023 02:35:18 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a00067
Thu 30 Mar 2023 02:35:47 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0abcbc1
Thu 30 Mar 2023 02:40:31 AM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
2e60d00
Thu 30 Mar 2023 02:41:16 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
291a093
Thu 30 Mar 2023 02:41:22 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10e7f78
Thu 30 Mar 2023 02:42:43 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bddb6a2
Thu 30 Mar 2023 02:47:45 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
30a7e73
Thu 30 Mar 2023 02:47:51 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
36cf249
Thu 30 Mar 2023 03:05:16 AM UTC: 
 arraylist.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|0
4386fcc
Thu 30 Mar 2023 03:05:40 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
e18dd3f
Thu 30 Mar 2023 08:43:41 PM UTC: 
 arraylist.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:67:9: error: unused variable ‘ind’ [-Werror=unused-variable]
   67 |     int ind = i + l->size;
      |         ^~~
arraylist.c:82:19: error: ‘ind’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |     return l->data[ind];
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
7c2bc51
Thu 30 Mar 2023 08:44:24 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
e913d4d
Thu 30 Mar 2023 08:46:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
cb54290
Thu 30 Mar 2023 08:49:23 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
6315672
Thu 30 Mar 2023 08:52:11 PM UTC: 
 arraylist.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  9|2
total_score: 40/70
659a122
